[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Buttons/TROTTENET - SliderOver.png" type="Texture" id=1]
[ext_resource path="res://Assets/Buttons/TROTTENET - SliderUnder.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Options.gd" type="Script" id=3]
[ext_resource path="res://Assets/Buttons/TROTTENET - Witerbutton.png" type="Texture" id=4]
[ext_resource path="res://Assets/Buttons/TROTTENET - Menubutton Pr.png" type="Texture" id=5]
[ext_resource path="res://Assets/Buttons/TROTTENET - Witerbutton Pr.png" type="Texture" id=6]
[ext_resource path="res://Assets/Buttons/TROTTENET - Menubutton.png" type="Texture" id=7]
[ext_resource path="res://Assets/Buttons/TROTTENET - Fertigbutton.png" type="Texture" id=8]
[ext_resource path="res://Assets/Buttons/TROTTENET - Fertigbutton Pr.png" type="Texture" id=9]
[ext_resource path="res://Assets/Buttons/TROTTENET - Soundbutton Pr.png" type="Texture" id=10]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 43, 2 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.35312
margin_top = 0.91703
margin_right = 1.35312
margin_bottom = 0.917023
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.5
margin_top = -46.0
margin_right = 34.5
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Witer" type="TextureButton" parent="Buttons"]
margin_right = 74.0
margin_bottom = 23.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="TextureButton" parent="Buttons"]
margin_top = 27.0
margin_right = 74.0
margin_bottom = 50.0
texture_normal = ExtResource( 10 )

[node name="HSlider" type="HSlider" parent="Buttons/Sound"]
margin_left = 22.3056
margin_top = 8.58056
margin_right = 65.3056
margin_bottom = 24.5806
custom_icons/grabber_highlight = ExtResource( 1 )
custom_icons/grabber = ExtResource( 1 )
custom_styles/slider = SubResource( 1 )
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="TextureButton" parent="Buttons"]
margin_top = 54.0
margin_right = 74.0
margin_bottom = 77.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 5 )

[node name="Fertig" type="TextureButton" parent="Buttons"]
margin_top = 81.0
margin_right = 74.0
margin_bottom = 104.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="Buttons/Sound/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Buttons/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Buttons/Fertig" to="." method="_on_Fertig_pressed"]
